# alertness-recognition

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: analyze.bat  check.bat  clean.bat  collect.bat  eval.bat  format.bat  lint.bat  record.bat  report.bat  run.bat  score.bat  setup.bat  test.bat  typecheck.bat  uninstall.bat
src/alertness/: __init__.py  __main__.py  analyze.py  app.py  config.py  contracts.py  evaluate.py  factory.py  geometry.py  guided.py  labeling.py  pipeline.py  ports.py  record_demo.py  report.py  score.py  temporal.py
src/alertness/calibration/: __init__.py  calibrator.py  store.py
src/alertness/classifier/: __init__.py  classifier.py  states.py
src/alertness/classifier/cues/: __init__.py  _support.py  blink.py  eye_closure.py  gaze_off.py  head_down.py  head_turn.py  yawn.py
src/alertness/detection/: __init__.py  mediapipe_detector.py
src/alertness/evaluation/: __init__.py  metrics.py  paths.py  replay.py  runner.py  stats.py
src/alertness/features/: __init__.py  blink.py  ear.py  extractor.py  gaze.py  head_pose.py  landmark_ids.py  mouth.py  normalize.py  perclos.py
src/alertness/feedback/: __init__.py  alert.py  composite.py  csv_sink.py  cue.py  jptext.py  overlay.py  tone.py  window_sink.py
src/alertness/sources/: __init__.py  video_file.py  webcam.py
tests/: _helpers.py  conftest.py  test_blink.py  test_cues.py  test_ear.py  test_eval_runner.py  test_guided.py  test_labeling.py  test_metrics.py  test_paths.py  test_perclos.py  test_rule_based.py  test_score.py  test_stats.py
(+2 files in other folders)
